--- a/package.json
+++ b/package.json
@@ -7,14 +7,22 @@
     "start": "webpack serve"
   },
   "dependencies": {
+    "@babel/polyfill": "^7.12.1",
     "vue": "^2.6.12",
-    "vue-resource": "^1.5.1"
+    "vue-resource": "^1.5.1",
+    "vuetify": "^2.3.16",
+    "vuex": "^3.5.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "babel-loader": "^8.1.0",
+    "css-loader": "^5.0.1",
+    "deepmerge": "^4.2.2",
+    "sass": "^1.29.0",
+    "sass-loader": "^10.0.5",
     "vue-loader": "^15.9.5",
+    "vue-style-loader": "^4.1.2",
     "vue-template-compiler": "^2.6.12",
     "vue-template-loader": "^1.1.0",
     "webpack": "^5.4.0",
