--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,4 @@
-
+spring.datasource.url=jdbc:mysql://localhost/kp
+spring.datasource.username=root
+spring.datasource.password=root
+spring.jpa.show-sql=true
