--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,5 @@
-spring.datasource.url=jdbc:mysql://localhost/kp
+spring.datasource.url=jdbc:mysql://127.0.0.1:3306/up?useUnicode=true&characterEncoding=UTF-8&zeroDateTimeBehavior=CONVERT_TO_NULL&serverTimezone=GMT
 spring.datasource.username=root
 spring.datasource.password=root
 spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=validate
