--- a/package.json
+++ b/package.json
@@ -8,8 +8,14 @@
   },
   "dependencies": {
     "@babel/polyfill": "^7.12.1",
+    "axios": "^0.21.0",
+    "core-js": "^3.7.0",
+    "regenerator-runtime": "^0.13.7",
+    "vee-validate": "^3.4.4",
     "vue": "^2.6.12",
     "vue-resource": "^1.5.1",
+    "vue-router": "^3.4.9",
+    "vue-validate": "^1.0.1",
     "vuetify": "^2.3.16",
     "vuex": "^3.5.1"
   },
@@ -17,6 +23,7 @@
     "@babel/core": "^7.12.3",
     "@babel/preset-env": "^7.12.1",
     "babel-loader": "^8.1.0",
+    "babel-polyfill": "^6.26.0",
     "css-loader": "^5.0.1",
     "deepmerge": "^4.2.2",
     "sass": "^1.29.0",
