--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "axios": "^0.21.0",
     "core-js": "^3.7.0",
     "regenerator-runtime": "^0.13.7",
+    "v-money": "^0.8.1",
     "vee-validate": "^3.4.4",
     "vue": "^2.6.12",
     "vue-resource": "^1.5.1",
