--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "vue-router": "^3.4.9",
     "vue-validate": "^1.0.1",
     "vuetify": "^2.3.16",
-    "vuex": "^3.5.1"
+    "vuex": "^3.5.1",
+    "vuex-persistedstate": "^4.0.0-beta.1"
   },
   "devDependencies": {
     "@babel/core": "^7.12.3",
