--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "babel-polyfill": "^6.26.0",
     "css-loader": "^5.0.1",
     "deepmerge": "^4.2.2",
+    "file-loader": "^6.2.0",
     "sass": "^1.29.0",
     "sass-loader": "^10.0.5",
     "vue-loader": "^15.9.5",
